tests/negative/gold/define_test.gold
tests/negative/define_test.toit:22:3: error: Left-hand side of definition must be an identifier
  4 := 499
  ^
tests/negative/define_test.toit:23:3: error: Left-hand side of definition must be an identifier
  (unresolved) ::= 42
  ^
tests/negative/define_test.toit:23:4: error: Unresolved identifier: 'unresolved'
  (unresolved) ::= 42
   ^~~~~~~~~~
tests/negative/define_test.toit:19:5: error: Definition of 'field' shadows outer field definition
    field := unresolved
    ^~~~~
tests/negative/define_test.toit:6:3: note: Shadowed field 'field'
  field := null
  ^~~~~
tests/negative/define_test.toit:19:14: error: Unresolved identifier: 'unresolved'
    field := unresolved
             ^~~~~~~~~~
tests/negative/define_test.toit:8:5: error: Definition of 'field' shadows outer field definition
    field := 499
    ^~~~~
tests/negative/define_test.toit:6:3: note: Shadowed field 'field'
  field := null
  ^~~~~
tests/negative/define_test.toit:12:5: error: Definition of 'local' shadows earlier definition
    local := "String"
    ^~~~~
tests/negative/define_test.toit:9:5: note: Earlier definition of 'local'
    local := 42
    ^~~~~
tests/negative/define_test.toit:15:5: error: Definition of 'param' shadows earlier definition
    param := 44
    ^~~~~
tests/negative/define_test.toit:7:7: note: Earlier definition of 'param'
  foo param:
      ^~~~~
tests/negative/define_test.toit:16:5: error: Unresolved identifier: 'unresolved'
    unresolved
    ^~~~~~~~~~
tests/negative/define_test.toit:11:11: error: Class 'int' does not have any method 'copy'
    local.copy 1
          ^~~~
tests/negative/define_test.toit:13:11: error: Class 'string' does not have any method 'abs'
    local.abs
          ^~~
Compilation failed.
